--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,13 @@ dependencies {
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
