--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         buildConfigField("String", "API_KEY", API_KEY)
         testInstrumentationRunner "com.example.shopinglisttesting.HiltTestRunner"
